# src/controller/index.js
@@ -1,3 +1,5 @@
 module.exports.booksController = require("./books.controller")
 
 module.exports.usersController = require("./users.controller")
+
+module.exports.transactionsController = require("./transaction.controller")
