# src/routes/api/v1/index.js
@@ -3,8 +3,10 @@ const router = express.Router()
 
 const bookRouter = require("./books.routes")
 const userRouter = require("./users.routes")
+const transactionsRouter = require("./transaction.routes")
 
-router.use("/books",bookRouter)
-router.use("/users",userRouter)
+router.use("/books", bookRouter)
+router.use("/users", userRouter)
+router.use("/transaction", transactionsRouter)
 
-module.exports =  router
+module.exports = router
